# FilterProject

./: CMakeLists.txt  FrameParametres.cpp  FrameParametres.hpp  MyOpenCV.hpp  ProcessedVideo.cpp  ProcessedVideo.hpp  ProcessingMethods.cpp  ProcessingMethods.hpp  README.md  TestingMetods.cpp  TestingMetods.hpp  VideoFrame.hpp  main.cpp
opencv_ready/: setup_vars_opencv4.cmd
opencv_ready/x64/vc17/lib/: OpenCVConfig.cmake  OpenCVModules-release.cmake  OpenCVModules.cmake  opencv_aruco4120.lib  opencv_bgsegm4120.lib  opencv_bioinspired4120.lib  opencv_calib3d4120.lib  opencv_ccalib4120.lib  opencv_core4120.lib  opencv_datasets4120.lib  opencv_dnn4120.lib  opencv_dnn_objdetect4120.lib  opencv_dnn_superres4120.lib  opencv_dpm4120.lib  opencv_face4120.lib  opencv_features2d4120.lib  opencv_flann4120.lib  opencv_fuzzy4120.lib  opencv_gapi4120.lib  opencv_hfs4120.lib  opencv_highgui4120.lib  opencv_img_hash4120.lib  opencv_imgcodecs4120.lib  opencv_imgproc4120.lib  opencv_intensity_transform4120.lib  opencv_line_descriptor4120.lib  opencv_mcc4120.lib  opencv_ml4120.lib  opencv_objdetect4120.lib  opencv_optflow4120.lib  opencv_phase_unwrapping4120.lib  opencv_photo4120.lib  opencv_plot4120.lib  opencv_quality4120.lib  opencv_rapid4120.lib  opencv_reg4120.lib  opencv_rgbd4120.lib  opencv_saliency4120.lib  opencv_shape4120.lib  opencv_signal4120.lib  (+14 more)
